--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ plugins {
 android {
     compileSdk 32
 
-    dataBinding{
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
 
     defaultConfig {
@@ -35,17 +35,15 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    apply plugin: 'kotlin-kapt'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 
     //구글맵
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
