--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ecarchargeinfo">
-
+//
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -11,6 +11,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <permission
+        android:name="example.gps.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"></permission>
 
     <application
         android:allowBackup="true"
@@ -23,13 +27,15 @@
         android:theme="@style/Theme.Design.Light.NoActionBar"
         tools:targetApi="31">
 
-        <!--<meta-data
+<!--
+        <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyD7-BtLpCHb8dvqUVEqb07oTcS6gbcnWmA" />-->
+            android:value="@string/google_map_key" />
+-->
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD7-BtLpCHb8dvqUVEqb07oTcS6gbcnWmA" />
+            android:value="@string/google_map_key" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
