--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ecarchargeinfo">
-//
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -27,15 +27,14 @@
         android:theme="@style/Theme.Design.Light.NoActionBar"
         tools:targetApi="31">
 
-<!--
-        <meta-data
+        <!--<meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_map_key" />
--->
+            android:value="@string/google_map_key" />-->
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_map_key" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
