--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,17 @@ dependencies {
 
     //구글맵
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    implementation 'com.google.android.gms:play-services-location:20.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.0'
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
 }
