[#11] NAVER GEOCODER 적용

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
+    // 네이버 지도 SDK
+    implementation 'com.naver.maps:map-sdk:3.15.0'
 }
