--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
 
     <application
-
+        android:requestLegacyExternalStorage="true"
         android:name=".config.ApplicationClass"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -32,7 +32,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
         android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_securty_config"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
         <!--
@@ -46,6 +46,9 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="@string/naver_client_id"/>
 
         <activity
             android:name=".main.presentation.ui.MainActivity"
