--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven {{
+            url 'https://naver.jfrog.io/artifactory/maven/'
+        }}
     }
 }
 rootProject.name = "ECarChargeInfo"
