--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,6 @@
         tools:targetApi="31">
 
         <!--
-        android:requestLegacyExternalStorage="true"
          <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_map_key" />
@@ -62,7 +61,7 @@
         </activity>
 
         <activity
-            android:name=".info.presentation.ui.InfoActivity"
+            android:name=".main.presentation.ui.InfoActivity"
             android:exported="false">
         </activity>
     </application>
