--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 21 17:09:10 KST 2022
-sdk.dir=C\:\\Users\\01058120012\\AppData\\Local\\Android\\Sdk
+#Wed Nov 16 07:18:21 GMT 2022
+sdk.dir=/Users/kyunggeun.lee/Library/Android/sdk
