--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,16 +66,21 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
-    // 네이버 지도 SDK
+    //네이버 지도 SDK
     implementation 'com.naver.maps:map-sdk:3.15.0'
 
     //Hilt
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
+    //ViewModel
     implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
 
+    implementation("androidx.core:core-splashscreen:1.0.0")
+
+    //
+    implementation("com.google.maps.android:android-maps-utils:0.6.2")
 }
 
 kapt {
