--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ecarchargeinfo">
 
-
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -18,7 +17,6 @@
         android:name="example.gps.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
-
     <application
         android:name=".config.ApplicationClass"
         android:allowBackup="true"
@@ -29,10 +27,9 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light.NoActionBar"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
         <!--
         android:requestLegacyExternalStorage="true"
          <meta-data
@@ -62,10 +59,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".info.presentation.ui.InfoActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
