--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,8 +79,11 @@ dependencies {
 
     implementation("androidx.core:core-splashscreen:1.0.0")
 
-    //
+    //cluster
     implementation("com.google.maps.android:android-maps-utils:0.6.2")
+
+    //SlidingUpPanel
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 }
 
 kapt {
