--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Nov 30 08:08:45 GMT 2022
-sdk.dir=/Users/kyunggeun.lee/Library/Android/sdk
+sdk.dir=C\:\\Users\\01058120012\\AppData\\Local\\Android\\Sdk
