[#24] InfoActivity 디자인 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,12 @@ android {
     buildFeatures {
         dataBinding = true
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+
 
     defaultConfig {
         applicationId "com.example.ecarchargeinfo"
